# truyenazz-crawler

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  biome.json  tsconfig.json  vitest.config.ts
.claude/skills/rust-testing/: SKILL.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  repo_layout.md  suggested_commands.md  task_completion.md  task_completion_checklist.md  tech_stack.md
scripts/: copy-assets.mjs
src/: cli.rs  cli.ts  crawler.rs  crawler.ts  epub.rs  font.rs  lib.rs  runner.rs  types.ts  ui.rs  utils.rs  utils.ts
src/__test__/: cli.test.ts  crawler-integration.test.ts  epub.test.ts  ui.test.ts  utils.test.ts
src/crawler/: chapter.rs  discovery.rs  mod.rs  parser.rs  types.rs
src/epub/: build.rs  chapters.rs  metadata.rs  mod.rs  package.rs
src/ui/: mod.rs  plan.rs
src/ui/screens/: download.rs  loading.rs  mod.rs  prompts.rs
src/ui/widgets/: mod.rs  path_input.rs  progress.rs  select.rs  text_input.rs
src/ui/wizard/: mod.rs  state.rs  steps.rs
tests/: cli.rs  crawl_chapter.rs  crawler.rs  epub.rs  font.rs  runner.rs  ui.rs  utils.rs
typescript/: README.md  package.json  pnpm-lock.yaml
typescript/.serena/: project.yml
typescript/.serena/memories/: style_and_conventions.md  suggested_commands.md
typescript/src/: epub.ts  font.ts  internal-cli-helpers.ts  mime-types.d.ts  ui.ts
typescript/src/__test__/: crawler.test.ts  font.test.ts  internal-cli-helpers.test.ts
