[package]
name = "truyenazz-crawler"
version = "1.0.0"
edition = "2024"
description = "Rust implementation of the TruyenAZZ crawler and EPUB builder"
license = "GPL-3.0-or-later"

[lib]
name = "truyenazz_crawler"
path = "src/lib.rs"

[[bin]]
name = "truyenazz-crawl"
path = "src/bin/truyenazz-crawl.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "sync", "io-util", "signal"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "rustls-native-certs", "charset"] }
scraper = "0.26"
ego-tree = "0.11"
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
zip = { version = "8", default-features = false, features = ["deflate"] }
unicode-normalization = "0.1"
mime_guess = "2"
regex = "1"
html-escape = "0.2"
url = "2"
once_cell = "1"
percent-encoding = "2"
futures = "0.3"
indicatif = "0.18"

[dev-dependencies]
mockito = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "sync", "io-util", "test-util"] }
